--- a/src/main/resources/view/dashboard.fxml
+++ b/src/main/resources/view/dashboard.fxml
@@ -9,5 +9,6 @@
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffa11f" height="68.0" stroke="BLACK" strokeType="INSIDE" width="600.0" />
       <Button layoutX="226.0" layoutY="22.0" mnemonicParsing="false" text="Acceuil" />
+      <Button layoutX="300.0" layoutY="22.0" mnemonicParsing="false" text="Se connecter" />
    </children>
 </AnchorPane>
