--- a/src/main/resources/view/login.fxml
+++ b/src/main/resources/view/login.fxml
@@ -16,7 +16,7 @@
 
             <Button onAction="#handleLogin" prefWidth="150" text="Se connecter" />
 
-            <Hyperlink onAction="#handleCreateAccount" style="-fx-font-size: 12px;" text="Pas encore de compte ? Créer" />
+            <Hyperlink onAction="#goToRegister" style="-fx-font-size: 12px;" text="Pas encore de compte ? Créer" />
 
         </VBox>
     </children>
