--- a/src/main/resources/view/vehicules.fxml
+++ b/src/main/resources/view/vehicules.fxml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="controller.VehiculeController"
             prefHeight="400.0" prefWidth="600.0">
+
+
+    <Label text="Gestion des Véhicules"
+           layoutX="220"
+           layoutY="20"
+           style="-fx-font-size: 24px; -fx-font-weight: bold;"/>
+
+
+    <TableView fx:id="tableVehicules" layoutX="20" layoutY="70" prefWidth="560" prefHeight="250">
+        <columns>
+            <TableColumn fx:id="colId" text="ID" prefWidth="50"/>
+            <TableColumn fx:id="colMarque" text="Marque" prefWidth="150"/>
+            <TableColumn fx:id="colModele" text="Modèle" prefWidth="150"/>
+            <TableColumn fx:id="colAnnee" text="Année" prefWidth="100"/>
+            <TableColumn fx:id="colDisponibilite" text="Disponibilité" prefWidth="100"/>
+        </columns>
+    </TableView>
+
+    <HBox layoutX="20" layoutY="330" spacing="10">
+        <Button text="Ajouter" fx:id="btnAjouter" prefWidth="100"/>
+        <Button text="Modifier" fx:id="btnModifier" prefWidth="100"/>
+        <Button text="Supprimer" fx:id="btnSupprimer" prefWidth="100"/>
+    </HBox>
 
 </AnchorPane>
