--- a/src/main/resources/view/dashboard.fxml
+++ b/src/main/resources/view/dashboard.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.layout.*?>
-<<<<<<< HEAD
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
@@ -40,53 +40,4 @@
         </VBox>
     </HBox>
 
-=======
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-
-<AnchorPane prefHeight="611.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DashboardController">
-   <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff9e21" height="68.0" stroke="BLACK" strokeType="INSIDE" width="600.0" />
-      <Button layoutX="254.0" layoutY="22.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="Acceuil" />
-      <Button layoutX="334.0" layoutY="22.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="Se connecter" />
-      <Button layoutX="442.0" layoutY="22.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="S'inscrire" />
-      <Label layoutX="14.0" layoutY="21.0" text="Drivenow" textFill="#f4f0f0">
-         <font>
-            <Font name="Roboto Light" size="19.0" />
-         </font>
-         <effect>
-            <DropShadow />
-         </effect>
-      </Label>
-      <AnchorPane layoutX="30.0" layoutY="132.0" prefHeight="270.0" prefWidth="258.0" style="-fx-background-color: transparent;">
-         <children>
-            <TextField layoutX="16.0" layoutY="80.0" prefHeight="26.0" prefWidth="220.0" promptText="Adresse précise, gare, métro..." style="-fx-background-radius: 15; -fx-border-radius: 15;">
-               <font>
-                  <Font name="System Bold Italic" size="12.0" />
-               </font>
-               <effect>
-                  <DropShadow />
-               </effect>
-            </TextField>
-            <DatePicker layoutX="19.0" layoutY="143.0" prefHeight="26.0" prefWidth="98.0" promptText="Debut" />
-            <DatePicker layoutX="142.0" layoutY="144.0" prefHeight="26.0" prefWidth="92.0" promptText="Fin" />
-            <Button layoutX="86.0" layoutY="207.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="92.0" style="-fx-background-color: orange; -fx-background-radius: 10;" text="Rechercher" textFill="#181717" />
-            <TextField alignment="CENTER" layoutX="9.0" layoutY="13.0" prefHeight="48.0" prefWidth="238.0" promptText="LOUER UNE VOITURE" style="-fx-background-color: transparent; -fx-text-fill: black;">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-               <effect>
-                  <Lighting>
-                     <bumpInput>
-                        <Shadow />
-                     </bumpInput>
-                     <light>
-                        <Light.Distant />
-                     </light>
-                  </Lighting>
-               </effect>
-            </TextField>
-         </children></AnchorPane>
-   </children>
->>>>>>> f5283363e5542eae80c85461ecba31a4e76bf225
 </AnchorPane>
