--- a/src/main/resources/view/reservations.fxml
+++ b/src/main/resources/view/reservations.fxml
@@ -2,32 +2,42 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="controller.ReservationController"
             prefHeight="400.0" prefWidth="600.0">
 
-    <Label text="Gestion des Réservations"
-           layoutX="180"
-           layoutY="20"
-           style="-fx-font-size: 24px; -fx-font-weight: bold;"/>
+    <children>
 
-    <TableView fx:id="tableReservations" layoutX="20" layoutY="70" prefWidth="560" prefHeight="250">
-        <columns>
-            <TableColumn fx:id="colId" text="ID" prefWidth="50"/>
-            <TableColumn fx:id="colUtilisateur" text="Utilisateur" prefWidth="150"/>
-            <TableColumn fx:id="colVehicule" text="Véhicule" prefWidth="150"/>
-            <TableColumn fx:id="colDateDebut" text="Date Début" prefWidth="100"/>
-            <TableColumn fx:id="colDateFin" text="Date Fin" prefWidth="100"/>
-        </columns>
-    </TableView>
+        <Label text="Gestion des Réservations"
+               layoutX="180"
+               layoutY="20"
+               style="-fx-font-size: 24px; -fx-font-weight: bold;"/>
 
-    <HBox layoutX="20" layoutY="330" spacing="10">
-        <Button text="Ajouter" fx:id="btnAjouter" prefWidth="100"/>
-        <Button text="Modifier" fx:id="btnModifier" prefWidth="100"/>
-        <Button text="Supprimer" fx:id="btnSupprimer" prefWidth="100"/>
-    </HBox>
+        <TableView fx:id="tableReservations"
+                   layoutX="20" layoutY="70"
+                   prefWidth="560" prefHeight="250">
+
+            <columns>
+                <TableColumn fx:id="colId" text="ID" prefWidth="50"/>
+                <TableColumn fx:id="colUtilisateur" text="Utilisateur" prefWidth="120"/>
+                <TableColumn fx:id="colVehicule" text="Véhicule" prefWidth="120"/>
+                <TableColumn fx:id="colDateDebut" text="Début" prefWidth="90"/>
+                <TableColumn fx:id="colDateFin" text="Fin" prefWidth="90"/>
+                <TableColumn fx:id="colStatus" text="Status" prefWidth="80"/>
+                <TableColumn fx:id="colMontant" text="Montant (€)" prefWidth="90"/>
+            </columns>
+
+        </TableView>
+
+        <HBox layoutX="20" layoutY="330" spacing="10">
+            <Button text="Ajouter" fx:id="btnAjouter" prefWidth="100"/>
+            <Button text="Modifier" fx:id="btnModifier" prefWidth="100"/>
+            <Button text="Supprimer" fx:id="btnSupprimer" prefWidth="100"
+                    style="-fx-background-color: #e74c3c; -fx-text-fill: white;"/>
+        </HBox>
+
+    </children>
 
 </AnchorPane>
