Interface orange sur chaques pages

--- a/src/main/resources/view/reservations.fxml
+++ b/src/main/resources/view/reservations.fxml
@@ -1,42 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.ReservationController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ReservationController">
 
     <children>
 
-        <Label text="Gestion des Réservations"
-               layoutX="180"
-               layoutY="20"
-               style="-fx-font-size: 24px; -fx-font-weight: bold;"/>
-
-        <TableView fx:id="tableReservations"
-                   layoutX="20" layoutY="70"
-                   prefWidth="560" prefHeight="250">
+        <TableView fx:id="tableReservations" layoutX="20" layoutY="70" prefHeight="250" prefWidth="560">
 
             <columns>
-                <TableColumn fx:id="colId" text="ID" prefWidth="50"/>
-                <TableColumn fx:id="colUtilisateur" text="Utilisateur" prefWidth="120"/>
-                <TableColumn fx:id="colVehicule" text="Véhicule" prefWidth="120"/>
-                <TableColumn fx:id="colDateDebut" text="Début" prefWidth="90"/>
-                <TableColumn fx:id="colDateFin" text="Fin" prefWidth="90"/>
-                <TableColumn fx:id="colStatus" text="Status" prefWidth="80"/>
-                <TableColumn fx:id="colMontant" text="Montant (€)" prefWidth="90"/>
+                <TableColumn fx:id="colId" prefWidth="50" text="ID" />
+                <TableColumn fx:id="colUtilisateur" prefWidth="120" text="Utilisateur" />
+                <TableColumn fx:id="colVehicule" prefWidth="120" text="Véhicule" />
+                <TableColumn fx:id="colDateDebut" prefWidth="90" text="Début" />
+                <TableColumn fx:id="colDateFin" prefWidth="90" text="Fin" />
+                <TableColumn fx:id="colStatus" prefWidth="80" text="Status" />
+                <TableColumn fx:id="colMontant" prefWidth="90" text="Montant (€)" />
             </columns>
 
         </TableView>
 
         <HBox layoutX="20" layoutY="330" spacing="10">
-            <Button text="Ajouter" fx:id="btnAjouter" prefWidth="100"/>
-            <Button text="Modifier" fx:id="btnModifier" prefWidth="100"/>
-            <Button text="Supprimer" fx:id="btnSupprimer" prefWidth="100"
-                    style="-fx-background-color: #e74c3c; -fx-text-fill: white;"/>
+            <Button fx:id="btnAjouter" prefWidth="100" text="Ajouter" />
+            <Button fx:id="btnModifier" prefWidth="100" text="Modifier" />
+            <Button fx:id="btnSupprimer" prefWidth="100" style="-fx-background-color: #e74c3c; -fx-text-fill: white;" text="Supprimer" />
         </HBox>
+      <AnchorPane prefHeight="50.0" prefWidth="600.0" style="-fx-background-color: FF862A;">
+         <children>
+            <Label layoutX="14.0" layoutY="16.0" text="DriveNow" textFill="WHITE">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+            </Label>
+      
+              <Label layoutX="135.0" layoutY="7.0" style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Gestion des Réservations" />
+         </children>
+      </AnchorPane>
 
     </children>
 
