--- a/src/main/resources/view/dashboard.fxml
+++ b/src/main/resources/view/dashboard.fxml
@@ -5,10 +5,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DashboardController">
-
-    <Label layoutX="220" layoutY="20" style="-fx-font-size: 28px; -fx-font-weight: bold;" text="Tableau de bord" />
 
 
     <VBox layoutX="20" layoutY="70" spacing="10">
@@ -34,5 +33,16 @@
             <Label fx:id="lblUsers" text="20" />
         </VBox>
     </HBox>
+   <AnchorPane prefHeight="50.0" prefWidth="700.0" style="-fx-background-color: FF862A;">
+      <children>
+      
+          <Label layoutX="272.0" layoutY="5.0" style="-fx-font-size: 28px; -fx-font-weight: bold;" text="Tableau de bord" />
+         <Label layoutX="14.0" layoutY="16.0" text="DriveNow" textFill="WHITE">
+            <font>
+               <Font name="Arial Black" size="12.0" />
+            </font>
+         </Label>
+      </children>
+   </AnchorPane>
 
 </AnchorPane>
