--- a/src/main/resources/view/register.fxml
+++ b/src/main/resources/view/register.fxml
@@ -1,51 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.RegisterController"
-            prefHeight="450.0" prefWidth="600.0">
+<AnchorPane prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RegisterController">
 
     <children>
-        <VBox alignment="CENTER" spacing="12"
-              layoutX="160" layoutY="20"
-              prefWidth="280" prefHeight="400">
+        <VBox alignment="CENTER" layoutX="160" layoutY="20" prefHeight="400" prefWidth="280" spacing="12">
 
-            <Label text="Créer un compte"
-                   style="-fx-font-size: 24px; -fx-font-weight: bold;"/>
+            <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Créer un compte" />
 
-            <TextField fx:id="nomField"
-                       promptText="Nom"
-                       prefWidth="250"/>
+            <TextField fx:id="nomField" prefWidth="250" promptText="Nom" />
 
-            <TextField fx:id="prenomField"
-                       promptText="Prénom"
-                       prefWidth="250"/>
+            <TextField fx:id="prenomField" prefWidth="250" promptText="Prénom" />
 
-            <TextField fx:id="emailField"
-                       promptText="Email"
-                       prefWidth="250"/>
+            <TextField fx:id="emailField" prefWidth="250" promptText="Email" />
 
-            <PasswordField fx:id="passwordField"
-                           promptText="Mot de passe"
-                           prefWidth="250"/>
+            <PasswordField fx:id="passwordField" prefWidth="250" promptText="Mot de passe" />
 
-            <PasswordField fx:id="confirmPasswordField"
-                           promptText="Confirmer le mot de passe"
-                           prefWidth="250"/>
+            <PasswordField fx:id="confirmPasswordField" prefWidth="250" promptText="Confirmer le mot de passe" />
 
-            <Button text="Créer le compte"
-                    prefWidth="180"
-                    onAction="#handleCreateAccount"/>
+            <Button onAction="#handleCreateAccount" prefWidth="180" text="Créer le compte" />
 
-            <Hyperlink text="Déjà un compte ? Se connecter"
-                       onAction="#goToLogin"
-                       style="-fx-font-size: 12px;"/>
+            <Hyperlink onAction="#goToLogin" style="-fx-font-size: 12px;" text="Déjà un compte ? Se connecter" />
 
         </VBox>
+      <AnchorPane prefHeight="50.0" prefWidth="600.0" style="-fx-background-color: FF862A;">
+         <children>
+            <Label layoutX="26.0" layoutY="16.0" text="DriveNow" textFill="WHITE">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
     </children>
 </AnchorPane>
