--- a/src/main/resources/view/users.fxml
+++ b/src/main/resources/view/users.fxml
@@ -1,34 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.UserController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.UserController">
 
-    <!-- Titre -->
-    <Label text="Gestion des Utilisateurs"
-           layoutX="180"
-           layoutY="20"
-           style="-fx-font-size: 24px; -fx-font-weight: bold;"/>
-
-    <TableView fx:id="tableUsers" layoutX="20" layoutY="70" prefWidth="560" prefHeight="250">
+    <TableView fx:id="tableUsers" layoutX="20" layoutY="70" prefHeight="250" prefWidth="560">
         <columns>
-            <TableColumn fx:id="colId" text="ID" prefWidth="50"/>
-            <TableColumn fx:id="colNom" text="Nom" prefWidth="120"/>
-            <TableColumn fx:id="colPrenom" text="Prénom" prefWidth="120"/>
-            <TableColumn fx:id="colEmail" text="Email" prefWidth="150"/>
-            <TableColumn fx:id="colRole" text="Rôle" prefWidth="100"/>
+            <TableColumn fx:id="colId" prefWidth="50" text="ID" />
+            <TableColumn fx:id="colNom" prefWidth="120" text="Nom" />
+            <TableColumn fx:id="colPrenom" prefWidth="120" text="Prénom" />
+            <TableColumn fx:id="colEmail" prefWidth="150" text="Email" />
+            <TableColumn fx:id="colRole" prefWidth="100" text="Rôle" />
         </columns>
     </TableView>
 
     <HBox layoutX="20" layoutY="330" spacing="10">
-        <Button text="Ajouter" fx:id="btnAjouter" prefWidth="100"/>
-        <Button text="Modifier" fx:id="btnModifier" prefWidth="100"/>
-        <Button text="Supprimer" fx:id="btnSupprimer" prefWidth="100"/>
+        <Button fx:id="btnAjouter" prefWidth="100" text="Ajouter" />
+        <Button fx:id="btnModifier" prefWidth="100" text="Modifier" />
+        <Button fx:id="btnSupprimer" prefWidth="100"  style="-fx-background-color: #e74c3c; -fx-text-fill: white;" text="Supprimer" />
     </HBox>
+   <AnchorPane prefHeight="50.0" prefWidth="600.0" style="-fx-background-color: FF862A;">
+      <children>
+         <Label layoutX="14.0" layoutY="16.0" text="DriveNow" textFill="WHITE">
+            <font>
+               <Font name="Arial Black" size="12.0" />
+            </font>
+         </Label>
+      
+          <!-- Titre -->
+          <Label layoutX="167.0" layoutY="7.0" style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Gestion des Utilisateurs" />
+      </children>
+   </AnchorPane>
 
 </AnchorPane>
