--- a/src/main/resources/view/vehicules.fxml
+++ b/src/main/resources/view/vehicules.fxml
@@ -1,40 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.VehiculeController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.VehiculeController">
 
     <children>
 
-        <Label text="Gestion des Véhicules"
-               layoutX="200"
-               layoutY="20"
-               style="-fx-font-size: 24px; -fx-font-weight: bold;"/>
-
-        <TableView fx:id="tableVehicules"
-                   layoutX="20" layoutY="70"
-                   prefWidth="560" prefHeight="250">
+        <TableView fx:id="tableVehicules" layoutX="20" layoutY="70" prefHeight="250" prefWidth="560">
 
             <columns>
-                <TableColumn fx:id="colId" text="ID" prefWidth="50"/>
-                <TableColumn fx:id="colMarque" text="Marque" prefWidth="120"/>
-                <TableColumn fx:id="colModele" text="Modèle" prefWidth="120"/>
-                <TableColumn fx:id="colType" text="Type" prefWidth="100"/>
-                <TableColumn fx:id="colPrixJournalier" text="Prix/jour (€)" prefWidth="100"/>
-                <TableColumn fx:id="colEtat" text="État" prefWidth="100"/>
+                <TableColumn fx:id="colId" prefWidth="50" text="ID" />
+                <TableColumn fx:id="colMarque" prefWidth="120" text="Marque" />
+                <TableColumn fx:id="colModele" prefWidth="120" text="Modèle" />
+                <TableColumn fx:id="colType" prefWidth="100" text="Type" />
+                <TableColumn fx:id="colPrixJournalier" prefWidth="100" text="Prix/jour (€)" />
+                <TableColumn fx:id="colEtat" prefWidth="50.0" text="État" />
             </columns>
 
         </TableView>
 
         <HBox layoutX="20" layoutY="330" spacing="10">
-            <Button fx:id="btnAjouter" text="Ajouter" prefWidth="120"/>
-            <Button fx:id="btnModifier" text="Modifier" prefWidth="120"/>
-            <Button fx:id="btnSupprimer" text="Supprimer" prefWidth="120" style="-fx-background-color: #e74c3c; -fx-text-fill: white;"/>
+            <Button fx:id="btnAjouter" prefWidth="120" text="Ajouter" />
+            <Button fx:id="btnModifier" prefWidth="120" text="Modifier" />
+            <Button fx:id="btnSupprimer" prefWidth="120" style="-fx-background-color: #e74c3c; -fx-text-fill: white;" text="Supprimer" />
         </HBox>
+      <AnchorPane prefHeight="50.0" prefWidth="600.0" style="-fx-background-color: FF862A;">
+         <children>
+      
+              <Label layoutX="177.0" layoutY="8.0" style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Gestion des Véhicules" />
+            <Label layoutX="14.0" layoutY="17.0" text="DriveNow" textFill="WHITE">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
 
     </children>
 
