--- a/src/main/resources/view/reservations.fxml
+++ b/src/main/resources/view/reservations.fxml
@@ -36,6 +36,8 @@
             <Button text="Modifier" fx:id="btnModifier" prefWidth="100"/>
             <Button text="Supprimer" fx:id="btnSupprimer" prefWidth="100"
                     style="-fx-background-color: #e74c3c; -fx-text-fill: white;"/>
+            <Button fx:id="btnBack" text="Retour Dashboard" layoutX="20" layoutY="20"/>
+
         </HBox>
 
     </children>
