--- a/src/main/resources/view/dashboard.fxml
+++ b/src/main/resources/view/dashboard.fxml
@@ -18,7 +18,7 @@
 
 
     <VBox layoutX="20" layoutY="70" spacing="10">
-        <Button text="Dashboard" fx:id="btnDashboard" prefWidth="150"/>
+        <Button text="Accueil Admin" fx:id="btnHomeAdmin" prefWidth="150"/>
         <Button text="Véhicules" fx:id="btnVehicules" prefWidth="150"/>
         <Button text="Réservations" fx:id="btnReservations" prefWidth="150"/>
         <Button text="Utilisateurs" fx:id="btnUsers" prefWidth="150"/>
