--- a/src/main/resources/view/homeAdmin.fxml
+++ b/src/main/resources/view/homeAdmin.fxml
@@ -1,14 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="controller.HomeAdminController"
-            prefHeight="400.0" prefWidth="600.0">
+            prefHeight="600" prefWidth="800">
 
+    <Label text="Accueil Admin"
+           layoutX="320"
+           layoutY="10"
+           style="-fx-font-size: 28px; -fx-font-weight: bold;"/>
+
+    <HBox layoutX="50" layoutY="50" spacing="20">
+        <VBox spacing="5" style="-fx-border-color: #3498db; -fx-border-width: 2; -fx-padding: 10;">
+            <Label text="Véhicules disponibles" style="-fx-font-weight: bold;"/>
+            <Label fx:id="lblVehicules" text="0"/>
+        </VBox>
+        <VBox spacing="5" style="-fx-border-color: #2ecc71; -fx-border-width: 2; -fx-padding: 10;">
+            <Label text="Réservations actives" style="-fx-font-weight: bold;"/>
+            <Label fx:id="lblReservations" text="0"/>
+        </VBox>
+        <VBox spacing="5" style="-fx-border-color: #f1c40f; -fx-border-width: 2; -fx-padding: 10;">
+            <Label text="Utilisateurs inscrits" style="-fx-font-weight: bold;"/>
+            <Label fx:id="lblUsers" text="0"/>
+        </VBox>
+    </HBox>
+
+    <TableView fx:id="tableVehicules" layoutX="50" layoutY="150" prefWidth="700" prefHeight="350">
+        <columns>
+            <TableColumn fx:id="colId" text="ID" prefWidth="50"/>
+            <TableColumn fx:id="colMarque" text="Marque" prefWidth="120"/>
+            <TableColumn fx:id="colModele" text="Modèle" prefWidth="120"/>
+            <TableColumn fx:id="colType" text="Type" prefWidth="100"/>
+            <TableColumn fx:id="colPrixJournalier" text="Prix Journalier" prefWidth="120"/>
+            <TableColumn fx:id="colEtat" text="État" prefWidth="100"/>
+        </columns>
+    </TableView>
+
+    <HBox layoutX="50" layoutY="520" spacing="10">
+        <Button fx:id="btnAjouter" text="Ajouter Véhicule" prefWidth="150"/>
+        <Button fx:id="btnBack" text="Dashboard" prefWidth="150"/>
+    </HBox>
 </AnchorPane>
