--- a/src/main/resources/view/vehicules.fxml
+++ b/src/main/resources/view/vehicules.fxml
@@ -34,6 +34,8 @@
             <Button fx:id="btnAjouter" text="Ajouter" prefWidth="120"/>
             <Button fx:id="btnModifier" text="Modifier" prefWidth="120"/>
             <Button fx:id="btnSupprimer" text="Supprimer" prefWidth="120" style="-fx-background-color: #e74c3c; -fx-text-fill: white;"/>
+            <Button fx:id="btnBack" text="Retour Dashboard" layoutX="20" layoutY="20"/>
+
         </HBox>
 
     </children>
