--- a/src/main/resources/view/homeAdmin.fxml
+++ b/src/main/resources/view/homeAdmin.fxml
@@ -12,6 +12,8 @@
            layoutX="320"
            layoutY="10"
            style="-fx-font-size: 28px; -fx-font-weight: bold;"/>
+    <Button fx:id="btnLogout" text="Déconnexion"
+            layoutX="680" layoutY="10" prefWidth="100"/>
 
     <HBox layoutX="50" layoutY="50" spacing="20">
         <VBox spacing="5" style="-fx-border-color: #3498db; -fx-border-width: 2; -fx-padding: 10;">
