--- a/src/main/resources/view/EditUser.fxml
+++ b/src/main/resources/view/EditUser.fxml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="controller.EditUserController"
-            prefHeight="300" prefWidth="400">
+            prefHeight="200" prefWidth="400"
+            style="-fx-background-color: #f4f4f4;">
 
-    <Label text="Modifier un utilisateur" layoutX="120" layoutY="10" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
+    <Label text="Modifier le rôle d'un utilisateur"
+           layoutX="50"
+           layoutY="20"
+           style="-fx-font-size: 20px; -fx-font-weight: bold; -fx-text-fill: #333333;"/>
 
-    <VBox layoutX="50" layoutY="50" spacing="10">
+    <VBox layoutX="50" layoutY="70" spacing="20" prefWidth="300">
+        <ComboBox fx:id="cmbRole" promptText="Sélectionnez le rôle" prefWidth="300"/>
 
-        <TextField fx:id="txtNom" promptText="Nom"/>
-        <TextField fx:id="txtPrenom" promptText="Prénom"/>
-        <TextField fx:id="txtEmail" promptText="Email"/>
-        <TextField fx:id="txtRole" promptText="Rôle (ex: ADMIN ou UTILISATEUR)"/>
-        <PasswordField fx:id="txtMotDePasse" promptText="Mot de passe"/>
-
-        <HBox spacing="10" alignment="CENTER">
-            <Button fx:id="btnModifier" text="Modifier" style="-fx-background-color: #f39c12; -fx-text-fill: white;"/>
-            <Button fx:id="btnAnnuler" text="Annuler"/>
+        <HBox spacing="20" alignment="CENTER">
+            <Button fx:id="btnModifier" text="Modifier"
+                    prefWidth="120"
+                    style="-fx-background-color: #f39c12; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 20;"/>
+            <Button fx:id="btnAnnuler" text="Annuler"
+                    prefWidth="120"
+                    style="-fx-background-color: #e74c3c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 20;"/>
         </HBox>
     </VBox>
 </AnchorPane>
